# seftpp

./: .gitignore  LICENSE  README.md  dijkstra_4dir.m  planner_wrapper.m  real_world_exp_main.m
atom_functions/: generatePolyMap.m  getCableState.m  isCollisionFree.m  newbresenham.m  pathLength.m  polarRotateAndMoveToXy.m
cpp/: CMakeLists.txt
cpp/include/: case.h  definitions.h  dijkstra_4dir.h  map.h  planner.h  planner_wrapper.h  solver.h  sparsity.h  tool.h
cpp/src/: dijkstra_4dir.cpp  main.cpp  map.cpp  planner.cpp  solver.cpp  sparsity.cpp  tool.cpp
planner/: get_neighbors.m  leastCostIndex.m  planner.m  planner_main.m  update_node_with_analytic_expansion.m
solver/: calSwing.m  calc_index.m  findEqualHCNode.m  isEqualHC.m  isSEF.m  sedFill.m  tracePath.m
visualisation/: bareMap.m  forPaperVisualization.m  showBasePoint.m  showPose.m
